--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,5 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
 }
 
 .deploycard {
@@ -30,6 +16,14 @@ body {
 
 .failed {
   background-color: #dd2b0e;
+}
+
+.warning {
+  background-color: #ab6100;
+}
+
+.undefined {
+  background-color: #868686;
 }
 
 a {
