[#6] Fixed : fix deployimg and changelog

--- a/src/DeployIMG.css
+++ b/src/DeployIMG.css
@@ -1,4 +1,4 @@
-.gl-avatar-identicon {
+.defaultimg {
     text-align: center;
     vertical-align: top;
     color: #fafafa;
@@ -6,17 +6,8 @@
     justify-content: center;
     align-items: center;
     font-size: 3rem;
-}
-
-.gl-avatar {
     border: 1px solid rgba(255,255,255,0.08);
     border-radius: 0.25rem;
-    overflow: hidden;
-    flex-shrink: 0;
+    background-color: #660e00;
     aspect-ratio: 1/1;
 }
-
-.gl-avatar-identicon-bg1 {
-    background-color: #660e00;
-}
-
